@@ -9,17 +9,20 @@ import net.minecraft.client.renderer.texture.TextureAtlasSprite;
 import net.minecraft.client.resources.model.BakedModel;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.level.BlockAndTintGetter;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraftforge.client.ChunkRenderTypeSet;
 import net.minecraftforge.client.model.data.ModelData;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import xfacthd.framedblocks.api.FramedBlocksAPI;
+import xfacthd.framedblocks.api.FramedBlocksClientAPI;
+import xfacthd.framedblocks.api.model.quad.QuadModifier;
 import xfacthd.framedblocks.api.type.IBlockType;
-import xfacthd.framedblocks.api.util.CtmPredicate;
-import xfacthd.framedblocks.api.util.FramedBlockData;
+import xfacthd.framedblocks.api.util.*;
 import xfacthd.framedblocks.api.block.IFramedBlock;
 import xfacthd.framedblocks.api.util.client.*;
 
@@ -29,28 +32,39 @@ import java.util.*;
 @SuppressWarnings("deprecation")
 public abstract class FramedBlockModel extends BakedModelProxy
 {
-    private final Cache<BlockState, QuadTable> quadCache = Caffeine.newBuilder()
+    private static final Direction[] DIRECTIONS = Direction.values();
+    private static final FramedBlockData DEFAULT_DATA = new FramedBlockData.Immutable(
+            Blocks.AIR.defaultBlockState(), new boolean[6], false
+    );
+    public static final ResourceLocation REINFORCEMENT_LOCATION = Utils.rl("block/framed_reinforcement");
+    private static BakedModel reinforcementModel = null;
+
+    private final Cache<QuadCacheKey, QuadTable> quadCache = Caffeine.newBuilder()
             .expireAfterAccess(ModelCache.DEFAULT_CACHE_DURATION)
             .build();
-    private final Cache<BlockState, CachedRenderTypes> renderTypeCache = Caffeine.newBuilder()
+    private final Cache<QuadCacheKey, CachedRenderTypes> renderTypeCache = Caffeine.newBuilder()
             .expireAfterAccess(ModelCache.DEFAULT_CACHE_DURATION)
             .build();
-    private final BlockState state;
-    private final IBlockType type;
+    protected final BlockState state;
     private final ChunkRenderTypeSet baseModelRenderTypes;
     private final boolean cacheFullRenderTypes;
     private final boolean forceUngeneratedBaseModel;
     private final boolean useBaseModel;
+    private final boolean transformAllQuads;
+    private final FullFaceCache fullFaceCache;
 
     public FramedBlockModel(BlockState state, BakedModel baseModel)
     {
         super(baseModel);
         this.state = state;
-        this.type = ((IFramedBlock) state.getBlock()).getBlockType();
         this.baseModelRenderTypes = getBaseModelRenderTypes();
         this.cacheFullRenderTypes = canFullyCacheRenderTypes();
         this.forceUngeneratedBaseModel = forceUngeneratedBaseModel();
         this.useBaseModel = useBaseModel();
+        this.transformAllQuads = transformAllQuads(state);
+        IBlockType type = ((IFramedBlock) state.getBlock()).getBlockType();
+        this.fullFaceCache = new FullFaceCache(type, state);
+
         Preconditions.checkState(
                 this.useBaseModel || !this.forceUngeneratedBaseModel,
                 "FramedBlockModel::useBaseModel() must return true when FramedBlockModel::forceUngeneratedBaseModel() returns true"
@@ -62,6 +76,8 @@ public abstract class FramedBlockModel extends BakedModelProxy
     {
         BlockState camoState = Blocks.AIR.defaultBlockState();
 
+        if (state == null) { state = this.state; }
+
         FramedBlockData data = extraData.get(FramedBlockData.PROPERTY);
         if (data != null && renderType != null)
         {
@@ -70,14 +86,15 @@ public abstract class FramedBlockModel extends BakedModelProxy
             camoState = data.getCamoState();
             if (camoState != null && !camoState.isAir())
             {
-                return getCamoQuads(state, camoState, side, rand, extraData, renderType);
+                return getCamoQuads(state, camoState, side, rand, extraData, data, renderType);
             }
         }
 
+        if (data == null) { data = DEFAULT_DATA; }
         if (renderType == null) { renderType = RenderType.cutout(); }
         if (camoState == null || camoState.isAir())
         {
-            return getCamoQuads(state, null, side, rand, extraData, renderType);
+            return getCamoQuads(state, null, side, rand, extraData, data, renderType);
         }
 
         return Collections.emptyList();
@@ -87,20 +104,27 @@ public abstract class FramedBlockModel extends BakedModelProxy
     public List<BakedQuad> getQuads(BlockState state, Direction side, RandomSource rand)
     {
         if (state == null) { state = this.state; }
-        return getCamoQuads(state, null, side, rand, ModelData.EMPTY, RenderType.cutout());
+        return getCamoQuads(state, null, side, rand, ModelData.EMPTY, DEFAULT_DATA, RenderType.cutout());
     }
 
     @Override
     public ChunkRenderTypeSet getRenderTypes(@NotNull BlockState state, @NotNull RandomSource rand, @NotNull ModelData data)
     {
-        BlockState camoState = Blocks.AIR.defaultBlockState();
         FramedBlockData fbData = data.get(FramedBlockData.PROPERTY);
-        if (fbData != null)
+        if (fbData == null)
         {
-            camoState = fbData.getCamoState();
+            fbData = DEFAULT_DATA;
         }
 
-        CachedRenderTypes cachedTypes = getCachedRenderTypes(camoState, rand, data);
+        BlockState camoState = fbData.getCamoState();
+        BlockState keyState = camoState;
+        if (camoState == null || camoState.isAir())
+        {
+            camoState = Blocks.AIR.defaultBlockState();
+            keyState = getNoCamoModelState(FramedBlocksAPI.getInstance().defaultModelState(), fbData);
+        }
+
+        CachedRenderTypes cachedTypes = getCachedRenderTypes(keyState, camoState, fbData, rand, data);
         if (cacheFullRenderTypes)
         {
             return cachedTypes.allTypes;
@@ -115,12 +139,15 @@ public abstract class FramedBlockModel extends BakedModelProxy
         return renderTypes;
     }
 
-    private CachedRenderTypes getCachedRenderTypes(BlockState camoState, RandomSource rand, ModelData data)
+    private CachedRenderTypes getCachedRenderTypes(BlockState keyState, BlockState camoState, FramedBlockData fbData, RandomSource rand, ModelData data)
     {
-        return renderTypeCache.get(camoState, key -> buildRenderTypeCache(key, rand, data));
+        return renderTypeCache.get(
+                makeCacheKey(keyState, null, data),
+                key -> buildRenderTypeCache(camoState, fbData, rand, data)
+        );
     }
 
-    private CachedRenderTypes buildRenderTypeCache(BlockState camoState, RandomSource rand, ModelData data)
+    private CachedRenderTypes buildRenderTypeCache(BlockState camoState, FramedBlockData fbData, RandomSource rand, ModelData data)
     {
         ChunkRenderTypeSet camoTypes = baseModelRenderTypes;
         if (!camoState.isAir())
@@ -130,37 +157,48 @@ public abstract class FramedBlockModel extends BakedModelProxy
                 ModelCache.getCamoRenderTypes(camoState, rand, data)
             );
         }
+        else if (fbData.isReinforced())
+        {
+            camoTypes = ChunkRenderTypeSet.union(baseModelRenderTypes, ModelUtils.CUTOUT);
+        }
         return new CachedRenderTypes(camoTypes, cacheFullRenderTypes ? getAdditionalRenderTypes(rand, data) : ChunkRenderTypeSet.none());
     }
 
-    private List<BakedQuad> getCamoQuads(BlockState state, BlockState camoState, Direction side, RandomSource rand, ModelData extraData, RenderType renderType)
+    private List<BakedQuad> getCamoQuads(BlockState state, BlockState camoState, Direction side, RandomSource rand, ModelData extraData, FramedBlockData fbData, RenderType renderType)
     {
-        ModelData camoData = ModelData.EMPTY;
+        ModelData camoData;
         BakedModel model;
         boolean noProcessing;
         boolean noCamo = camoState == null;
+        boolean needCtCtx;
         boolean camoInRenderType;
+        boolean addReinforcement;
 
         if (noCamo)
         {
-            camoState = FramedBlocksAPI.getInstance().defaultModelState();
+            needCtCtx = false;
+            camoState = getNoCamoModelState(FramedBlocksAPI.getInstance().defaultModelState(), fbData);
+            addReinforcement = useBaseModel && fbData.isReinforced();
             camoInRenderType = baseModelRenderTypes.contains(renderType);
-            noProcessing = (camoInRenderType && forceUngeneratedBaseModel) || type.getCtmPredicate().test(state, side);
+            noProcessing = (camoInRenderType && forceUngeneratedBaseModel) || fullFaceCache.isFullFace(side);
             model = getCamoModel(camoState, useBaseModel);
+            camoData = ModelData.EMPTY;
         }
         else
         {
-            noProcessing = type.getCtmPredicate().test(state, side);
+            noProcessing = fullFaceCache.isFullFace(side);
+            needCtCtx = needCtContext(noProcessing);
             model = getCamoModel(camoState, false);
-            camoData = noProcessing ? ModelUtils.getCamoModelData(model, camoState, extraData) : ModelData.EMPTY;
-            camoInRenderType = getCachedRenderTypes(camoState, rand, camoData).camoTypes.contains(renderType);
+            camoData = needCtCtx ? ModelUtils.getCamoModelData(model, camoState, extraData) : ModelData.EMPTY;
+            camoInRenderType = getCachedRenderTypes(camoState, camoState, fbData, rand, camoData).camoTypes.contains(renderType);
+            addReinforcement = false;
         }
 
         if (noProcessing)
         {
             ChunkRenderTypeSet addLayers = getAdditionalRenderTypes(rand, extraData);
             boolean additionalQuads = addLayers.contains(renderType);
-            if (!camoInRenderType && !additionalQuads) { return Collections.emptyList(); }
+            if (!camoInRenderType && !additionalQuads && !addReinforcement) { return List.of(); }
 
             List<BakedQuad> quads = new ArrayList<>();
 
@@ -174,28 +212,55 @@ public abstract class FramedBlockModel extends BakedModelProxy
                 getAdditionalQuads(quads, side, state, rand, extraData, renderType);
             }
 
+            if (addReinforcement && renderType == RenderType.cutout())
+            {
+                quads.addAll(reinforcementModel.getQuads(camoState, side, rand, camoData, renderType));
+            }
+
             return quads;
         }
         else
         {
-            ModelData finalCamoData = camoData;
+            Object ctCtx = needCtCtx ? FramedBlocksClientAPI.getInstance().extractCTContext(camoData) : null;
             return quadCache.get(
-                    camoState,
-                    key -> buildQuadCache(state, key, rand, extraData, finalCamoData, noCamo)
+                    makeCacheKey(camoState, ctCtx, extraData),
+                    key -> buildQuadCache(state, key.state(), rand, extraData, ctCtx != null ? camoData : ModelData.EMPTY, noCamo, addReinforcement)
             ).getQuads(renderType, side);
         }
+    }
+
+    private static boolean needCtContext(boolean noProcessing)
+    {
+        ConTexMode mode = FramedBlocksClientAPI.getInstance().getConTexMode();
+        if (mode == ConTexMode.NONE) { return false; }
+
+        return noProcessing || mode.atleast(ConTexMode.FULL_CON_FACE);
     }
 
     /**
      * Builds a {@link RenderType} -> {@link Direction} -> {@link List<BakedQuad>} table with all render types used by this model
      */
-    private QuadTable buildQuadCache(BlockState state, BlockState camoState, RandomSource rand, ModelData data, ModelData camoData, boolean noCamo)
+    private QuadTable buildQuadCache(
+            BlockState state, BlockState camoState, RandomSource rand, ModelData data, ModelData camoData, boolean noCamo, boolean addReinforcement
+    )
     {
         QuadTable quadTable = new QuadTable();
 
-        ChunkRenderTypeSet camoLayers = noCamo ? baseModelRenderTypes : ModelCache.getRenderTypes(camoState, rand, camoData);
+        ChunkRenderTypeSet modelLayers = getRenderTypes(state, rand, data);
+        ChunkRenderTypeSet camoLayers;
+        if (noCamo)
+        {
+            camoLayers = addReinforcement ? ChunkRenderTypeSet.union(baseModelRenderTypes, ModelUtils.CUTOUT) : baseModelRenderTypes;
+            // Make sure the RenderType set being iterated actually contains the no-camo layers in case getQuads()
+            // was called with a null RenderType while a camo is provided (i.e. block breaking overlay)
+            modelLayers = ChunkRenderTypeSet.union(modelLayers, camoLayers);
+        }
+        else
+        {
+            camoLayers = ModelCache.getRenderTypes(camoState, rand, camoData);
+        }
 
-        for (RenderType renderType : getRenderTypes(state, rand, data))
+        for (RenderType renderType : modelLayers)
         {
             boolean camoInRenderType = camoLayers.contains(renderType);
 
@@ -204,9 +269,11 @@ public abstract class FramedBlockModel extends BakedModelProxy
                     camoState,
                     rand,
                     data,
+                    camoData,
                     renderType,
                     camoInRenderType,
-                    noCamo
+                    noCamo,
+                    addReinforcement && renderType == RenderType.cutout()
             ));
         }
 
@@ -216,23 +283,31 @@ public abstract class FramedBlockModel extends BakedModelProxy
     /**
      * Builds the list of quads per side for a given {@linkplain BlockState camo state} and {@link RenderType}
      */
-    private Map<Direction, List<BakedQuad>> makeQuads(BlockState state, BlockState camoState, RandomSource rand, ModelData data, RenderType renderType, boolean camoInRenderType, boolean noCamo)
+    private Map<Direction, List<BakedQuad>> makeQuads(
+            BlockState state, BlockState camoState, RandomSource rand, ModelData data, ModelData camoData, RenderType renderType,
+            boolean camoInRenderType, boolean noCamo, boolean addReinforcement
+    )
     {
         Map<Direction, List<BakedQuad>> quadMap = new IdentityHashMap<>();
         quadMap.put(null, new ArrayList<>());
-        for (Direction dir : Direction.values()) { quadMap.put(dir, new ArrayList<>()); }
+        for (Direction dir : DIRECTIONS) { quadMap.put(dir, new ArrayList<>()); }
 
         if (camoInRenderType)
         {
             BakedModel camoModel = getCamoModel(camoState, noCamo && useBaseModel);
-            List<BakedQuad> quads = ModelUtils.getAllCullableQuads(camoModel, camoState, rand, renderType)
-                            .stream()
-                            .filter(q -> !type.getCtmPredicate().test(state, q.getDirection()))
-                            .toList();
+            List<BakedQuad> quads = ModelUtils.getAllCullableQuads(camoModel, camoState, rand, camoData, renderType);
+            if (addReinforcement)
+            {
+                quads.addAll(ModelUtils.getAllCullableQuads(reinforcementModel, camoState, rand, camoData, renderType));
+            }
+            if (!transformAllQuads)
+            {
+                quads.removeIf(q -> fullFaceCache.isFullFace(q.getDirection()));
+            }
 
             for (BakedQuad quad : quads)
             {
-                transformQuad(quadMap, quad);
+                transformQuad(quadMap, quad, data);
             }
             postProcessQuads(quadMap);
         }
@@ -250,8 +325,21 @@ public abstract class FramedBlockModel extends BakedModelProxy
      * Called for each {@link BakedQuad} of the camo block's model for whose side this block's
      * {@link CtmPredicate#test(BlockState, Direction)} returns {@code false}.
      * @param quadMap The target map to put all final quads into
-     * @param quad The source quad. Must not be modified, use {@link ModelUtils#duplicateQuad(BakedQuad)} to
-     *             deep-copy the quad before manipulating it
+     * @param quad @param quad The source quad. Must not be modified directly, use {@link QuadModifier}s to
+     *             modify the quad
+     * @param data The {@link ModelData}
+     */
+    protected void transformQuad(Map<Direction, List<BakedQuad>> quadMap, BakedQuad quad, ModelData data)
+    {
+        transformQuad(quadMap, quad);
+    }
+
+    /**
+     * Called for each {@link BakedQuad} of the camo block's model for whose side this block's
+     * {@link CtmPredicate#test(BlockState, Direction)} returns {@code false}.
+     * @param quadMap The target map to put all final quads into
+     * @param quad The source quad. Must not be modified directly, use {@link QuadModifier}s to
+     *             modify the quad
      */
     protected abstract void transformQuad(Map<Direction, List<BakedQuad>> quadMap, BakedQuad quad);
 
@@ -276,6 +364,12 @@ public abstract class FramedBlockModel extends BakedModelProxy
     protected boolean useBaseModel() { return forceUngeneratedBaseModel(); }
 
     /**
+     * Return true if all quads should be submitted for transformation, even if their cull-face would be filtered
+     * by the {@link CtmPredicate}
+     */
+    protected boolean transformAllQuads(BlockState state) { return false; }
+
+    /**
      * Return the set of {@link RenderType}s used for the base model without camo.
      * @apiNote Must be available when the FramedBlockModel constructor is called
      */
@@ -288,6 +382,20 @@ public abstract class FramedBlockModel extends BakedModelProxy
      * therefore be cached based on the camo BlockState
      */
     protected boolean canFullyCacheRenderTypes() { return true; }
+
+    @ApiStatus.Internal
+    protected BlockState getNoCamoModelState(BlockState camoState, FramedBlockData fbData)
+    {
+        if (fbData.useAltModel())
+        {
+            camoState = camoState.setValue(FramedProperties.ALT, true);
+        }
+        if (fbData.isReinforced())
+        {
+            camoState = camoState.setValue(FramedProperties.REINFORCED, true);
+        }
+        return camoState;
+    }
 
     /**
      * Return the {@link BakedModel} to use as the camo model for the given camoState
@@ -327,10 +435,35 @@ public abstract class FramedBlockModel extends BakedModelProxy
      */
     protected void getAdditionalQuads(Map<Direction, List<BakedQuad>> quadMap, BlockState state, RandomSource rand, ModelData data, RenderType renderType) {}
 
+    /**
+     * Return a custom {@link QuadCacheKey} that holds additional metadata which influences the resulting quads.
+     * @implNote The resulting object must at least store the given {@link BlockState} and connected textures context object
+     * and should either be a record or have an otherwise properly implemented {@code hashCode()} and {@code equals()}
+     * implementation
+     * @param state The {@link BlockState} of the camo applied to the block
+     * @param ctCtx The current connected textures context object, may be null
+     * @param data The {@link ModelData} from the {@link xfacthd.framedblocks.api.block.FramedBlockEntity}
+     */
+    protected QuadCacheKey makeCacheKey(BlockState state, Object ctCtx, ModelData data)
+    {
+        return new SimpleQuadCacheKey(state, ctCtx);
+    }
+
     @Nonnull
     @Override
     public final ModelData getModelData(@Nonnull BlockAndTintGetter level, @Nonnull BlockPos pos, @Nonnull BlockState state, @Nonnull ModelData tileData)
     {
+        FramedBlockData data = tileData.get(FramedBlockData.PROPERTY);
+        if (data != null && !data.getCamoState().isAir())
+        {
+            BlockState camoState = data.getCamoState();
+            BakedModel model = ModelCache.getModel(camoState);
+            tileData = tileData.derive()
+                    .with(FramedBlockData.CAMO_DATA, model.getModelData(level, pos, camoState, tileData))
+                    .build();
+        }
+
+        //noinspection removal
         return tileData.derive()
                 .with(FramedBlockData.LEVEL, level)
                 .with(FramedBlockData.POS, pos)
@@ -352,13 +485,61 @@ public abstract class FramedBlockModel extends BakedModelProxy
         return baseModel.getParticleIcon();
     }
 
+    public final void clearCache()
+    {
+        quadCache.invalidateAll();
+        renderTypeCache.invalidateAll();
+    }
 
+
+
+    public static void captureReinforcementModel(Map<ResourceLocation, BakedModel> models)
+    {
+        reinforcementModel = models.get(REINFORCEMENT_LOCATION);
+    }
+
+
+
+    @SuppressWarnings("unused")
+    protected interface QuadCacheKey
+    {
+        BlockState state();
+
+        Object ctCtx();
+    }
+
+    /**
+     * @param state The {@link BlockState} of the camo applied to the block
+     * @param ctCtx The connected textures context data used by the camo model, may be null
+     */
+    private record SimpleQuadCacheKey(BlockState state, Object ctCtx) implements QuadCacheKey { }
 
     private record CachedRenderTypes(ChunkRenderTypeSet camoTypes, ChunkRenderTypeSet overlayTypes, ChunkRenderTypeSet allTypes)
     {
         public CachedRenderTypes(ChunkRenderTypeSet camoTypes, ChunkRenderTypeSet overlayTypes)
         {
             this(camoTypes, overlayTypes, ChunkRenderTypeSet.union(camoTypes, overlayTypes));
+        }
+    }
+
+    private static class FullFaceCache
+    {
+        private final boolean[] cache = new boolean[7];
+
+        public FullFaceCache(IBlockType type, BlockState state)
+        {
+            CtmPredicate pred = type.getCtmPredicate();
+            for (Direction side : DIRECTIONS)
+            {
+                boolean full = pred.test(state, side);
+                cache[side.ordinal()] = full;
+            }
+            cache[6] = false;
+        }
+
+        public boolean isFullFace(Direction side)
+        {
+            return side != null && cache[side.ordinal()];
         }
     }
 }
